--- a/WebMXH/Views/Home/EditProfile.cshtml
+++ b/WebMXH/Views/Home/EditProfile.cshtml
@@ -16,6 +16,7 @@
     <title>EditProfile</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <link rel="stylesheet" href="~/Content/assets/css/style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/sweetalert/1.1.3/sweetalert.min.css" />
     <!-- Emoji CSS -->
     <link rel="stylesheet" href="~/Content/assets/css/emojionearea.min.css">
     <!-- Fontawesome CSS -->
@@ -243,7 +244,7 @@
                         <div class="form-group">
                             <div style=" display: flex; justify-content: space-between; margin-top: 20px; position: absolute; left: -51%;">
                                 <div>
-                                    <input type="submit" value="Lưu lại thông tin đã sửa" style=" height: 40px;" class="button-profile btn btn-success" />
+                                    <input id="submitEdit" type="submit" value="Lưu lại thông tin đã sửa" style=" height: 40px;" class="button-profile btn btn-success" />
                                 </div>
                                 <div>
                                     <a href="@Url.Action("Profiles","Home")" style="height: 40px; line-height: 36px; margin-left:20px;" class="button-profile btn btn-primary">Quay về trang cá nhân</a>
@@ -258,15 +259,28 @@
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/sweetalert/1.1.3/sweetalert.min.js"></script>
     <script>
         var opening = document.getElementById('accountUser');
         var closing = document.getElementById('closeSetting');
+        var submitEdit = document.querySelector("#submitEdit");
 
         opening.onclick = function () {
             accountUserSetting.style.display = 'block';
         }
         closing.onclick = function () {
             accountUserSetting.style.display = 'none';
+        }
+
+        submitEdit.onclick = function () {
+            swal({
+                title: "Thông báo",
+                text: "Lưu lại thành công",
+                type: "success",
+                confirmButtonClass: "btn-primary",
+                confirmButtonText: "OK",
+                closeOnConfirm: false,
+            })
         }
     </script>
 </body>
