--- a/WebMXH/Views/Home/Register.cshtml
+++ b/WebMXH/Views/Home/Register.cshtml
@@ -13,6 +13,7 @@
     <title>Đăng ký - Social Media Greenzone</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <link rel="stylesheet" href="~/Content/assets/css/style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/sweetalert/1.1.3/sweetalert.min.css" />
     <link rel="stylesheet" href="~/Content/assets/fonts/fontawesome-free-5.15.3-web/css/all.min.css">
 </head>
 <body style="background-image: url('/Content/assets/img/bg.jpg');background-size: cover;background-repeat: no-repeat;">
@@ -66,33 +67,20 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
     @*<script src="~/Scripts/jquery-1.10.2.min.js"></script>*@
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/sweetalert/1.1.3/sweetalert.min.js"></script>
+    <script>
+        var button4 = document.querySelector("#submitCreate");
+
+        button4.onclick = function () {
+            swal({
+                title: "Thông báo",
+                text: "Đăng ký thành công",
+                type: "success",
+                confirmButtonClass: "btn-primary",
+                confirmButtonText: "OK",
+                closeOnConfirm: true,
+            })
+        }
+    </script>
 </body>
-
-<!--Begin Modal -->
-<!--End Modal-->
-<script>
-
-      var modalObject = document.getElementById('modal');
-
-      var button1 = document.getElementById('button-openCreate');
-      var button2 = document.getElementById('close');
-      var button3 = document.getElementById('close2');
-    var button4 = document.getElementById('submitCreate');
-
-      button1.onclick = function(){
-        modalObject.style.display='block';
-      }
-      button2.onclick = function(){
-        modalObject.style.display='none';
-      }
-      button3.onclick = function(){
-        modalObject.style.display='none';
-      }
-      button4.onclick = function(){
-          alert('Đăng ký thành công');
-          setTimeout(() => {
-              modalObject.style.display='none'
-          }, 0);
-       }
-</script>
 </html>
