--- a/WebMXH/Views/Home/Profiles.cshtml
+++ b/WebMXH/Views/Home/Profiles.cshtml
@@ -138,7 +138,8 @@
     </div>
     <div style="margin-top:-260px;" class="container-fluid">
         <div class="row">
-            <div class="col">
+            <!--Thông tin-->
+            <div class="col" style="margin-left:125px;margin-top:14%;">
                 <div class="row">
                     <div class="info-profile">
                         <h5 style="margin-top:10px;">Giới thiệu</h5>
@@ -200,7 +201,7 @@
                 </div>
             </div>
             <!-- Bài viết -->
-            <div class="col">
+            <div class="col" style="margin-right:120px;">
                 <br>
                 <br>
                 <br>
